Fixed token variable

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       # Test
       - name: Run tests
         uses: game-ci/unity-test-runner@v2
-        with:
+        env:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
 
       # Build
