--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,13 +32,13 @@ jobs:
             Library-
       # Test
       - name: Run tests
-        uses: game-ci/unity-test-runner@v2
-        env:
+        uses: game-ci/unity-test-runner@v4
+        with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
 
       # Build
       - name: Build project
-        uses: game-ci/unity-builder@v2
+        uses: game-ci/unity-builder@v4
         with:
           targetPlatform: WebGL
           allowDirtyBuild: true
