--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,71 +1,61 @@
 name: Build
 
-on:
-  pull_request: {}
-  push: {}
-
-
-env:
-  UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-  UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-  UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-#  UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
+on: [push, pull_request]
 
 jobs:
   build:
-    name: Build my project
+    name: Build my project ✨
     runs-on: ubuntu-latest
     steps:
-
-      # Checkout
+      # Checkout (without LFS)
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      # Git LFS
+      - name: Create LFS file list
+        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
+
+      - name: Restore LFS cache
+        uses: actions/cache@v3
+        id: lfs-cache
         with:
-          lfs: true
-    
+          path: .git/lfs
+          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
+
+      - name: Git LFS Pull
+        run: |
+          git lfs pull
+          git add .
+          git reset --hard
+
       # Cache
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         with:
           path: Library
           key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
           restore-keys: |
             Library-
+
       # Test
       - name: Run tests
         uses: game-ci/unity-test-runner@v4
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
 
       # Build
       - name: Build project
         uses: game-ci/unity-builder@v4
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           targetPlatform: WebGL
-          allowDirtyBuild: true
-          
 
-      # Output 
-      - uses: actions/upload-artifact@v2
+      # Output
+      - uses: actions/upload-artifact@v3
         with:
           name: Build
           path: build
-      - name: Upload GitHub Pages artifact
-        uses: actions/upload-pages-artifact@v1.0.7
-        with:
-         # Artifact name
-          name: development # optional, default is github-pages
-          # Path of the directory containing the static assets.
-          path: build # default is _site/
-          # Duration after which artifact will expire in days.
-          retention-days: 30 # optional, default is 1
-
-#      - name: Zip build
-#        run: |
-#          pushd build/StandaloneWindows64
-#          zip -r ../../StandaloneWindows64.zip .
-#          popd
-
-#      - uses: actions/upload-artifact@v2
-#        with:
-#          name: Upload Build
-#          path: StandaloneWindows64.zip
